tests/negative/neg_try_send_compound_else_use.safe
-- Test: neg_try_send_compound_else_use
-- Description: Compound Boolean false paths do not prove try_send failure.
--   The else arm of `Success and then Ready` is reachable when Success is
--   true and Ready is false, so the source remains conditionally unavailable
--   there and cannot be sent again.
-- Expected: REJECT move_source_not_nonnull

package Neg_Try_Send_Compound_Else_Use is

   type Payload is record
      Value : Integer;
   end record;

   type Payload_Ptr is access Payload;

   channel Data_Ch : Payload_Ptr capacity 1;

   procedure Run is
      Source  : Payload_Ptr = new ((Value = 1) as Payload);
      Success : Boolean = False;
      Ready   : Boolean = False;
   begin
      try_send Data_Ch, Source, Success;
      if Success and then Ready then
         null;
      else
         send Data_Ch, Source;
      end if;
   end Run;

end Neg_Try_Send_Compound_Else_Use;
